code25_all/scala/14034825.txt
scala> val name = "World"
name: java.lang.String = World

scala> val message = s"Hello $name"
<console>:1: error: ';' expected but string literal found.
   val message = s"Hello $name"
                  ^

